<resources>
    <string name="app_name">Desafio2</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="or">OR</string>
    <string name="btnregister">REGISTER</string>
    <string name="name_hint">Name</string>
    <string name="repeat_password">Repeat the password</string>
    <string name="campo_vazio">Please, fill in the field %1$s</string>
</resources>