<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEmailIntern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            style="@style/TextInputField"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:layout_constraintEnd_toEndOf="@id/tiEmail"
        app:layout_constraintStart_toStartOf="@id/tiEmail"
        app:layout_constraintTop_toBottomOf="@id/tiEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiSenhaIntern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/TextInputField"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnlogin"
        style="@style/ButtonDefault"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="@+id/tiSenha"
        app:layout_constraintStart_toStartOf="@+id/tiSenha"
        app:layout_constraintTop_toBottomOf="@+id/tiSenha"
        android:background="@drawable/red_button"/>

    <ImageView
        android:id="@+id/ivdivisor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/divisor"
        app:layout_constraintBottom_toTopOf="@id/btnregister"
        app:layout_constraintEnd_toStartOf="@id/tvor"
        app:layout_constraintStart_toStartOf="@+id/btnlogin"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

    <TextView
        android:id="@+id/tvor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/tvLogin_or"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/ivdivisor"
        app:layout_constraintStart_toEndOf="@id/ivdivisor"
        app:layout_constraintEnd_toStartOf="@id/ivdivisor2"
        app:layout_constraintBottom_toBottomOf="@id/ivdivisor"/>

    <ImageView
        android:id="@+id/ivdivisor2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/divisor"
        app:layout_constraintBottom_toBottomOf="@id/ivdivisor"
        app:layout_constraintEnd_toEndOf="@id/btnlogin"
        app:layout_constraintStart_toEndOf="@id/tvor"
        app:layout_constraintTop_toTopOf="@id/ivdivisor"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnregister"
        style="@style/ButtonDefault"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/btnregister"
        app:layout_constraintEnd_toEndOf="@+id/ivdivisor2"
        app:layout_constraintStart_toStartOf="@+id/ivdivisor"
        app:layout_constraintTop_toBottomOf="@+id/ivdivisor"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/grey_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>